--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Make Gradle wrapper executable
         run: chmod +x ./gradlew
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace
+      - name: Build Debug APK (skip GreenDAO codegen)
+        run: ./gradlew assembleDebug -x greendao --stacktrace
 
       - name: Upload Debug APK
         uses: ./.github/actions/upload-artifact
